<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:paddingBottom="7dp"
        android:id="@+id/tv_id"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/tv_step"
        android:textSize="20sp"
        android:layout_alignRight="@id/tv_id"
        android:text="@string/step"
        android:layout_below="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_id"
        android:hint="@string/inpute_id"
        android:layout_toRightOf="@id/tv_id"
        android:layout_alignBottom="@id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_step"
        android:textSize="20sp"
        android:layout_toRightOf="@id/tv_step"
        android:layout_width="match_parent"
        android:layout_alignTop="@id/tv_step"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="number"/>

    <CheckBox
        android:id="@+id/cb_check"
        android:text="记住ID"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_step"
        android:layout_alignLeft="@id/et_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_below="@id/et_step"
        android:layout_alignRight="@id/et_step" />

    <TextView
        android:layout_below="@+id/bt_confirm"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_showStep"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/info"
        android:text="@string/tips"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>